<resources>
    <string name="app_name">Hello World Messenger</string>
    <string name="global">Global</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="account">Account</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="add_avatar">Add avatar</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="greetings">Welcome back!</string>
    <string name="log_in_to_continue">Log In to continue</string>
    <string name="log_in">Log In</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="name_error">Enter name</string>
    <string name="email_error">Enter email</string>
    <string name="password_error">Enter password</string>
    <string name="confirm_password_error">Password does not match</string>
</resources>